--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon  app.js",
+    "start-server": "node app.js"
   },
-  "author": "",
+  "author": "Eleonora Kazakova",
   "license": "ISC",
-  "description": "",
+  "description": "Complete Node.js Guide",
   "dependencies": {
     "express": "^4.19.2",
     "fs-extra": "^11.2.0",
     "next": "^14.2.8"
   },
   "devDependencies": {
-    "@babel/cli": "^7.24.8"
+    "@babel/cli": "^7.24.8",
+    "nodemon": "^3.1.9"
   }
 }
