--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "description": "Complete Node.js Guide",
   "dependencies": {
-    "express": "^4.19.2",
+    "body-parser": "^1.20.3",
+    "express": "^4.21.2",
     "fs-extra": "^11.2.0",
     "next": "^14.2.8"
   },
