--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "description": "Complete Node.js Guide",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "express-handlebars": "^8.0.1",
     "fs-extra": "^11.2.0",
-    "next": "^14.2.8"
+    "next": "^14.2.8",
+    "pug": "^3.0.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.24.8",
