--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "body-parser": "^1.20.3",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
-    "express-handlebars": "^8.0.1",
+    "express-handlebars": "3.0",
     "fs-extra": "^11.2.0",
     "next": "^14.2.8",
     "pug": "^3.0.3"
