--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.2",
     "express-handlebars": "3.0",
     "fs-extra": "^11.2.0",
+    "mysql2": "^3.14.3",
     "next": "^14.2.8",
     "pug": "^3.0.3"
   },
